# machine-analysis

./: .flake8  pyproject.toml
.github/workflows/: validate  validate.yaml
docs/: conf.py  index.rst
docs/source/: machines.rst  modules.rst
src/machines/: AnomalyDetector.py  CycleSegmenter.py  DataLoader.py  ReportGenerator.py  StateDetector.py
src/machines/preprocessing/: DataLoader.py  MachineDataPreprocessor.py
tests/: conftest.py  test_data_preprocessor.py  test_dataloader.py  test_state_detector.py
